--- a/vue3_demo_相比于vue2的模板的变化/package.json
+++ b/vue3_demo_相比于vue2的模板的变化/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.5.1",
     "nprogress": "^0.2.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
